# icswebtracker

./: .pypirc  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/ICSwebtracker/: __init__.py  admin.py  apps.py  middleware.py  models.py
testvenv/: pyvenv.cfg
