[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "icswebtracker"
version = "0.1.1"
authors = [
  { name="Regan Jones", email="regan@industrialchannelsolutions.com" },
]
description = "A Django app for tracking website visitors"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "Django>=3.2",
    "django-ipware>=7.0.0",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/reagon0/icswebtracker"
Issues = "https://github.com/reagon0/icswebtracker/issues"